# sheltr

./: README.md  pyproject.toml
.github/workflows/: ci.yml
sheltr/: __init__.py  cli.py  patterns.py  scanner.py
sheltr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_scanner.py
